<preference-headers
        xmlns:android="http://schemas.android.com/apk/res/android">

    <header android:fragment="com.starlon.starvisuals.PreferenceActivity$FragmentGeneral"
            android:id="@+id/prefs_fragment_general"
            android:title="@string/prefs_title_general"
            android:summary="@string/prefs_summary_general" />

    <header android:fragment="com.starlon.starvisuals.PreferenceActivity$FragmentActor"
            android:id="@+id/prefs_fragment_actor"
            android:title="@string/prefs_title_actor"
            android:summary="@string/prefs_summary_actor" />

    <header android:fragment="com.starlon.starvisuals.PreferenceActivity$FragmentInput"
            android:id="@+id/prefs_fragment_input"
            android:title="@string/prefs_title_input"
            android:summary="@string/prefs_summary_input" />

    <header android:fragment="com.starlon.starvisuals.PreferenceActivity$FragmentMorph"
            android:id="@+id/prefs_fragment_morph"
            android:title="@string/prefs_title_morph"
            android:summary="@string/prefs_summary_morph" />

</preference-headers>
