<?xml version="1.0" encoding="utf-8"?>

<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
        <PreferenceCategory
                android:title="@string/prefs_title_input">
                
                <PreferenceScreen
                    android:fragment="com.starlon.starvisuals.PreferenceActivity$InputFragment"
                    android:title="@string/title_input_singular">

                    <ListPreference
                            android:id="@+id/prefs_input_selection"
                            android:key="prefs_input_selection"
                            android:title="@string/prefs_input_selection"
                            android:summary="@string/prefs_input_selection_summary"/>

                </PreferenceScreen>

        </PreferenceCategory>
    
</PreferenceScreen>
