<?xml version="1.0" encoding="utf-8"?>

<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

        <PreferenceCategory
                android:title="@string/prefs_title_general">

                <ListPreference
                       android:id="@+id/prefs_actor_selection"
                       android:key="prefs_actor_selection"
                       android:title="@string/prefs_actor_selection"
                       android:summary="@string/prefs_actor_selection_summary"/>
               
                <PreferenceScreen
                    android:fragment="com.starlon.starvisuals.PreferenceActivity$ActorFragment"
                    android:title="@string/title_actor_singular"
                    android:widgetLayout="@+id/actor_info_list"/>

        </PreferenceCategory>
    
</PreferenceScreen>
