<?xml version="1.0" encoding="utf-8"?>


<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent" 
    android:orientation="vertical">
    
    <LinearLayout 
        android:layout_width="fill_parent" 
        android:layout_height="wrap_content" 
        android:orientation="vertical" 
        android:baselineAligned="false"
        android:layout_marginTop="10dip"
        android:layout_marginBottom="10dip">

        <TextView 
            android:textAppearance="?android:attr/textAppearanceLarge" 
            android:layout_gravity="center" 
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/title_plugin_singular">
        </TextView>

    </LinearLayout>
    
    <LinearLayout
        android:id="@+id/info_actor_plugin_layout"
        android:layout_width="fill_parent" 
        android:layout_height="wrap_content" 
        android:orientation="vertical" 
        android:baselineAligned="false"
        android:layout_marginTop="10dip"
        android:layout_marginBottom="10dip">

            <TextView
                android:text="@string/title_plugin_long_name"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"/>
            <TextView
                android:id="@+id/actor_long_name"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"/>

            <TextView
                android:text="@string/title_plugin_author"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"/>
            <TextView
                android:id="@+id/actor_author"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"/>

            <TextView
                android:text="@string/title_plugin_version"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"/>
            <TextView
                android:id="@+id/actor_version"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"/>

            <TextView
                android:text="@string/title_plugin_about"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"/>
            <TextView
                android:id="@+id/actor_about"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"/>

            <TextView
                android:text="@string/title_plugin_help"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"/>
            <TextView
                android:id="@+id/actor_help"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"/>


    </LinearLayout>
</LinearLayout>


