<?xml version="1.0" encoding="utf-8"?>


<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent" 
    android:orientation="vertical">
    
    <LinearLayout 
        android:layout_width="fill_parent" 
        android:layout_height="wrap_content" 
        android:orientation="horizontal" 
        android:baselineAligned="false"
        android:layout_marginTop="10dip"
        android:layout_marginBottom="10dip">

    <Button
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:text="@string/info_button_actor"
        android:onClick="showActor" />

    <Button
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:text="@string/info_button_input"
        android:onClick="showInput" />

    <Button
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:text="@string/info_button_morph"
        android:onClick="showMorph" />

    </LinearLayout>
    
    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:padding="5dip">
        
        <LinearLayout
                android:id="@+id/info_plugin_wrapper_layout"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent" 
                android:orientation="vertical">
                
        </LinearLayout>
    </ScrollView>
</LinearLayout>


