<?xml version="1.0" encoding="utf-8"?>

<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
        <PreferenceCategory
                android:title="@string/prefs_title_general">
                
            <LinearLayout 
                android:layout_width="fill_parent" 
                android:layout_height="wrap_content" 
                android:orientation="vertical" 
                android:baselineAligned="false"
                android:layout_marginTop="10dip"
                android:layout_marginBottom="10dip">
                        <ListPreference
                            android:id="@+id/prefs_actor_selection"
                            android:key="prefs_actor_selection"
                            android:title="@string/prefs_actor_selection"
                            android:summary="@string/prefs_actor_selection_summary"/>

                        <PreferenceScreen
                            android:fragment="com.starlon.starvisuals.PreferenceActivity$ActorFragment"
                            android:title="@string/title_actor_singular"
                            android:layout="@layout/about_plugins">
    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:padding="5dip">
                
            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="fill_parent" 
                android:orientation="vertical"
                android:paddingBottom="25dip">
                
                <TextView 
                    android:text="@string/title_plugin_long_name" 
                    android:textAppearance="?android:attr/textAppearanceLarge" 
                    android:layout_height="wrap_content" 
                    android:layout_width="wrap_content"
                    android:layout_gravity="left"
                    android:layout_weight="1"/>

                <TextView 
                    android:id="@+id/actor_info_long_name"
                    android:paddingBottom="15dip"
                    android:layout_height="wrap_content" 
                    android:layout_width="wrap_content"
                    android:layout_gravity="left"
                    android:layout_weight="1"/>
              
                <TextView 
                    android:text="@string/title_plugin_author" 
                    android:textAppearance="?android:attr/textAppearanceLarge" 
                    android:layout_height="wrap_content" 
                    android:layout_width="wrap_content" 
                    android:linksClickable="true"
                    android:layout_gravity="left"
                    android:layout_weight="0"
                    android:autoLink="all"/>

                <TextView 
                    android:id="@+id/actor_info_author"
                    android:paddingBottom="15dip"
                    android:layout_height="wrap_content" 
                    android:layout_width="wrap_content"
                    android:layout_gravity="left"
                    android:layout_weight="1"/>

                <TextView 
                    android:text="@string/title_plugin_version" 
                    android:textAppearance="?android:attr/textAppearanceLarge" 
                    android:layout_height="wrap_content" 
                    android:layout_width="wrap_content" 
                    android:linksClickable="true"
                    android:layout_gravity="left"
                    android:layout_weight="0"
                    android:autoLink="all"/>

                <TextView 
                    android:id="@+id/actor_info_version"
                    android:paddingBottom="15dip"
                    android:layout_height="wrap_content" 
                    android:layout_width="wrap_content"
                    android:layout_gravity="left"
                    android:layout_weight="1"/>

                <TextView 
                    android:text="@string/title_plugin_about" 
                    android:textAppearance="?android:attr/textAppearanceLarge" 
                    android:layout_height="wrap_content" 
                    android:layout_width="wrap_content" 
                    android:linksClickable="true"
                    android:layout_gravity="left"
                    android:layout_weight="0"
                    android:autoLink="all"/>

                <TextView 
                    android:id="@+id/actor_info_about"
                    android:paddingBottom="15dip"
                    android:layout_height="wrap_content" 
                    android:layout_width="wrap_content"
                    android:layout_gravity="left"
                    android:layout_weight="1"/>

                <TextView 
                    android:text="@string/title_plugin_help" 
                    android:textAppearance="?android:attr/textAppearanceLarge" 
                    android:layout_height="wrap_content" 
                    android:layout_width="wrap_content" 
                    android:linksClickable="true"
                    android:layout_gravity="left"
                    android:layout_weight="0"
                    android:autoLink="all"/>

                <TextView 
                    android:id="@+id/actor_info_help"
                    android:paddingBottom="15dip"
                    android:layout_height="wrap_content" 
                    android:layout_width="wrap_content"
                    android:layout_gravity="left"
                    android:layout_weight="1"/>

                <TextView 
                    android:text="@string/title_plugin_license" 
                    android:textAppearance="?android:attr/textAppearanceLarge" 
                    android:layout_height="wrap_content" 
                    android:layout_width="wrap_content" 
                    android:linksClickable="true"
                    android:layout_gravity="left"
                    android:layout_weight="0"
                    android:autoLink="all"/>

                <TextView 
                    android:id="@+id/actor_info_license"
                    android:paddingBottom="15dip"
                    android:layout_height="wrap_content" 
                    android:layout_width="wrap_content"
                    android:layout_gravity="left"
                    android:linksClickable="true"
                    android:layout_weight="1"/>

            </LinearLayout>
    </ScrollView>
                        </PreferenceScreen>
            </LinearLayout>

            <LinearLayout 
                android:layout_width="fill_parent" 
                android:layout_height="wrap_content" 
                android:orientation="vertical" 
                android:baselineAligned="false"
                android:layout_marginTop="10dip"
                android:layout_marginBottom="10dip">


                    <ListPreference
                        android:id="@+id/prefs_input_selection"
                        android:key="prefs_input_selection"
                        android:title="@string/prefs_input_selection"
                        android:summary="@string/prefs_input_selection_summary"/>

                    <PreferenceScreen
                        android:fragment="com.starlon.starvisuals.PreferenceActivity$InputFragment"
                        android:title="@string/title_input_singular" >
    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:padding="5dip">
                
            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="fill_parent" 
                android:orientation="vertical"
                android:paddingBottom="25dip">
                
                <TextView 
                    android:text="@string/title_plugin_long_name" 
                    android:textAppearance="?android:attr/textAppearanceLarge" 
                    android:layout_height="wrap_content" 
                    android:layout_width="wrap_content"
                    android:layout_gravity="left"
                    android:layout_weight="1"/>

                <TextView 
                    android:id="@+id/input_info_long_name"
                    android:paddingBottom="15dip"
                    android:layout_height="wrap_content" 
                    android:layout_width="wrap_content"
                    android:layout_gravity="left"
                    android:layout_weight="1"/>
              
                <TextView 
                    android:text="@string/title_plugin_author" 
                    android:textAppearance="?android:attr/textAppearanceLarge" 
                    android:layout_height="wrap_content" 
                    android:layout_width="wrap_content" 
                    android:linksClickable="true"
                    android:layout_gravity="left"
                    android:layout_weight="0"
                    android:autoLink="all"/>

                <TextView 
                    android:id="@+id/input_info_author"
                    android:paddingBottom="15dip"
                    android:layout_height="wrap_content" 
                    android:layout_width="wrap_content"
                    android:layout_gravity="left"
                    android:layout_weight="1"/>

                <TextView 
                    android:text="@string/title_plugin_version" 
                    android:textAppearance="?android:attr/textAppearanceLarge" 
                    android:layout_height="wrap_content" 
                    android:layout_width="wrap_content" 
                    android:linksClickable="true"
                    android:layout_gravity="left"
                    android:layout_weight="0"
                    android:autoLink="all"/>

                <TextView 
                    android:id="@+id/input_info_version"
                    android:paddingBottom="15dip"
                    android:layout_height="wrap_content" 
                    android:layout_width="wrap_content"
                    android:layout_gravity="left"
                    android:layout_weight="1"/>

                <TextView 
                    android:text="@string/title_plugin_about" 
                    android:textAppearance="?android:attr/textAppearanceLarge" 
                    android:layout_height="wrap_content" 
                    android:layout_width="wrap_content" 
                    android:linksClickable="true"
                    android:layout_gravity="left"
                    android:layout_weight="0"
                    android:autoLink="all"/>

                <TextView 
                    android:id="@+id/input_info_about"
                    android:paddingBottom="15dip"
                    android:layout_height="wrap_content" 
                    android:layout_width="wrap_content"
                    android:layout_gravity="left"
                    android:layout_weight="1"/>

                <TextView 
                    android:text="@string/title_plugin_help" 
                    android:textAppearance="?android:attr/textAppearanceLarge" 
                    android:layout_height="wrap_content" 
                    android:layout_width="wrap_content" 
                    android:linksClickable="true"
                    android:layout_gravity="left"
                    android:layout_weight="0"
                    android:autoLink="all"/>

                <TextView 
                    android:id="@+id/input_info_help"
                    android:paddingBottom="15dip"
                    android:layout_height="wrap_content" 
                    android:layout_width="wrap_content"
                    android:layout_gravity="left"
                    android:layout_weight="1"/>

                <TextView 
                    android:text="@string/title_plugin_license" 
                    android:textAppearance="?android:attr/textAppearanceLarge" 
                    android:layout_height="wrap_content" 
                    android:layout_width="wrap_content" 
                    android:linksClickable="true"
                    android:layout_gravity="left"
                    android:layout_weight="0"
                    android:autoLink="all"/>

                <TextView 
                    android:id="@+id/input_info_license"
                    android:paddingBottom="15dip"
                    android:layout_height="wrap_content" 
                    android:layout_width="wrap_content"
                    android:layout_gravity="left"
                    android:linksClickable="true"
                    android:layout_weight="1"/>

            </LinearLayout>
    </ScrollView>
                    </PreferenceScreen>

            </LinearLayout>

            <LinearLayout 
                android:layout_width="fill_parent" 
                android:layout_height="wrap_content" 
                android:orientation="vertical" 
                android:baselineAligned="false"
                android:layout_marginTop="10dip"
                android:layout_marginBottom="10dip">


                    <CheckBoxPreference
                        android:key="prefs_morph_enabled"
                        android:title="@string/prefs_morph_enabled"
                        android:summary="@string/prefs_summary_morph_enabled"
                        android:defaultValue="@string/morph_enabled"
                        android:enabled="true"/>

                    <EditTextPreference
                        android:key="prefs_morph_steps"
                        android:title="@string/prefs_morph_steps"
                        android:summary="@string/prefs_morph_steps"
                        android:defaultValue="14"
                        android:inputType="number"
                        android:enabled="true"/>

                    <ListPreference
                            android:id="@+id/prefs_morph_selection"
                            android:key="prefs_morph_selection"
                            android:title="@string/prefs_morph_selection"
                            android:summary="@string/prefs_morph_selection_summary"/>
                    <PreferenceScreen
                        android:fragment="com.starlon.starvisuals.PreferenceActivity$MorphFragment"
                        android:title="@string/title_morph_singular" >
    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:padding="5dip">
                
            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="fill_parent" 
                android:orientation="vertical"
                android:paddingBottom="25dip">
                
                <TextView 
                    android:text="@string/title_plugin_long_name" 
                    android:textAppearance="?android:attr/textAppearanceLarge" 
                    android:layout_height="wrap_content" 
                    android:layout_width="wrap_content"
                    android:layout_gravity="left"
                    android:layout_weight="1"/>

                <TextView 
                    android:id="@+id/morph_info_long_name"
                    android:paddingBottom="15dip"
                    android:layout_height="wrap_content" 
                    android:layout_width="wrap_content"
                    android:layout_gravity="left"
                    android:layout_weight="1"/>
              
                <TextView 
                    android:text="@string/title_plugin_author" 
                    android:textAppearance="?android:attr/textAppearanceLarge" 
                    android:layout_height="wrap_content" 
                    android:layout_width="wrap_content" 
                    android:linksClickable="true"
                    android:layout_gravity="left"
                    android:layout_weight="0"
                    android:autoLink="all"/>

                <TextView 
                    android:id="@+id/morph_info_author"
                    android:paddingBottom="15dip"
                    android:layout_height="wrap_content" 
                    android:layout_width="wrap_content"
                    android:layout_gravity="left"
                    android:layout_weight="1"/>

                <TextView 
                    android:text="@string/title_plugin_version" 
                    android:textAppearance="?android:attr/textAppearanceLarge" 
                    android:layout_height="wrap_content" 
                    android:layout_width="wrap_content" 
                    android:linksClickable="true"
                    android:layout_gravity="left"
                    android:layout_weight="0"
                    android:autoLink="all"/>

                <TextView 
                    android:id="@+id/morph_info_version"
                    android:paddingBottom="15dip"
                    android:layout_height="wrap_content" 
                    android:layout_width="wrap_content"
                    android:layout_gravity="left"
                    android:layout_weight="1"/>

                <TextView 
                    android:text="@string/title_plugin_about" 
                    android:textAppearance="?android:attr/textAppearanceLarge" 
                    android:layout_height="wrap_content" 
                    android:layout_width="wrap_content" 
                    android:linksClickable="true"
                    android:layout_gravity="left"
                    android:layout_weight="0"
                    android:autoLink="all"/>

                <TextView 
                    android:id="@+id/morph_info_about"
                    android:paddingBottom="15dip"
                    android:layout_height="wrap_content" 
                    android:layout_width="wrap_content"
                    android:layout_gravity="left"
                    android:layout_weight="1"/>

                <TextView 
                    android:text="@string/title_plugin_help" 
                    android:textAppearance="?android:attr/textAppearanceLarge" 
                    android:layout_height="wrap_content" 
                    android:layout_width="wrap_content" 
                    android:linksClickable="true"
                    android:layout_gravity="left"
                    android:layout_weight="0"
                    android:autoLink="all"/>

                <TextView 
                    android:id="@+id/morph_info_help"
                    android:paddingBottom="15dip"
                    android:layout_height="wrap_content" 
                    android:layout_width="wrap_content"
                    android:layout_gravity="left"
                    android:layout_weight="1"/>

                <TextView 
                    android:text="@string/title_plugin_license" 
                    android:textAppearance="?android:attr/textAppearanceLarge" 
                    android:layout_height="wrap_content" 
                    android:layout_width="wrap_content" 
                    android:linksClickable="true"
                    android:layout_gravity="left"
                    android:layout_weight="0"
                    android:autoLink="all"/>

                <TextView 
                    android:id="@+id/morph_info_license"
                    android:paddingBottom="15dip"
                    android:layout_height="wrap_content" 
                    android:layout_width="wrap_content"
                    android:layout_gravity="left"
                    android:linksClickable="true"
                    android:layout_weight="1"/>

            </LinearLayout>
    </ScrollView>
                    </PreferenceScreen>
            </LinearLayout>

        </PreferenceCategory>
    
</PreferenceScreen>
